Fix #318: Remove Guava dependency